# shlerp-cmd

./: .gitignore  LICENSE  MANIFEST.in  README.md  bsave.py  dev-requirements.txt  function.template  main.py  nodesave.py  poetry.lock.backup  pyproject.toml  requirements.txt  rules.json  settings.json  settings.py  setup.py  uninstall.py  utils.py
config/: alias.sh  app_details.json  function.alias  function.template  rules.json  settings.json
docs/: rulesystem.md  settings.md
shlerp/: main.py
shlerp/config/: app_details.json  settings.json  shlerp
shlerp/docs/: rulesystem.md  settings.md
shlerp/tools/: piputils.py  scan.py  state.py  utils.py
tools/: core_tools.py  data.py  piputils.py  scan.py  settings.py  state.py  utils.py
tools/pip/: putils.py
